testing user, product y category completed
